# c_study

./: .editorconfig  CMakeLists.txt  README.md
algs/: alg.cslink.combine.c  alg.cslink.cycle_check.c  alg.cslink.delete.c  alg.cslink.merge.c  alg.cslink.mid_node.c  alg.cslink.palindrome.c  alg.cslink.reverse.c  alg.cslink.test.c  ds.cslink.h  glibc.strstr2.c
day01.hello-world/: main.c
day02.data-type/: convert.c  main.c
day03.vars/: a.out  case.c  main.c  string.c
day04.pointer/: a.out  local_pointer.c  main.c  pointer_pointer.c  struct_pointer.c
day05.struct/: main.c  union_struct_order.c
day06.union/: include.h  main.c
day07.input-ouput/: main.c
day08.file/: convert.h  main.c  mkdir.c  test.c
day09.macro/: main.c
day10.error/: main.c
day11.va_list/: main.c
day12.malloc/: main.c
day13.argv/: main.c
demo01.php-embed/: call.php  main.c
examples/: Untitled Diagram.drawio  eg.test.c
